main.css
body {
	font-family: Roboto,Helvetica Neue,Arial,sans-serif;
	font-size: 14px;
	width: 1440px;
	margin: auto;
	color: #aaa;
	background-color: #222;
}

#col1	{
	width: 1148px;
	height: 300px;
	background-color: #115;
	float: left;
}

#gamesdiv	{
	width: 288px;
	height: 900px;
	background-color: #232;
	float: left;
}

#infodiv,#countrydiv,#langdiv,#genrediv	{
	width: 287px;
	height: 299px;
	float: left;
	background-color: #113;
}

.boxheader	{
	padding: 2px 20px;
	background-color: #424;
	color: #eee;
}

#filterdiv	{
	width: 1148px;
	float: left;
	background-color: #525;
	height: 20px;
}

#linechart	{
	width: 1148px;
	height: 580px;
	background-color: #111;
	float: left;
}

.svg	{
	width: 100%;
	height: 100%;
}

.svg rect,text	{
	cursor: pointer;
}

.bulbs span	span {
	background-color: #c22;
	padding: 0px 6px;
	margin: 0px 3px;
	border-radius: 4px;
	color: #ddd;
	font-size: 12px;
	cursor: pointer;
}

.horscroll	{
	overflow-x: scroll;
	overflow-y: hidden;
}

.verscroll	{
	overflow-x: hidden;
	overflow-y: scroll;
}

